# git-auto-sync

./: .gitignore  LICENSE  PROMPT.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/git_auto_sync/: cli.py  config.py  git.py  lockfile.py  log.py  maintenance.py  scheduler.py  sync.py
tests/: conftest.py  test_cli.py  test_config.py  test_git.py  test_lockfile.py  test_maintenance.py  test_scheduler.py  test_sync.py
